# aloud.

./: .gitattributes  .gitignore  CLAUDE.md  Install-Linux.desktop  Install-Mac.command  Install-Windows.bat  Install.bat  Install.command  LICENSE-EXCEPTION.md  README.md  Setup-Mac.command  Setup-Windows.bat  Start-Windows.bat  Start.bat  Start.command  aloud.spec  flake.nix  glooow.spec  install-easy.ps1  install-easy.sh  install.ps1  install.sh  requirements-browser.txt  requirements.txt  start.ps1  start.sh
.beads/: deletions.jsonl  issues.jsonl
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy-server.yml  security.yml  tauri-release.yml
Glooow.app/Contents/: Info.plist
assets/: aloud.icns
config/: default.yaml
dev-docs/: README.nix.md  building.md  deploy.md  desktop.md  dev-cheatsheet.md  pre-release-checklist.md  style.md  token-estimates.md  ts-migration-status.md  ts-parity-audit.md  ts-server.md  voice-barge-in.md
docs/: 404.html  CNAME  README.md  README.nix.md  building.md  dev-cheatsheet.md  index.html  style.md  ts-migration-status.md
docs/css/: style.css
docs/js/: download.js  faq.js  theme.js
docs/privacy/: index.html
scripts/: Setup-Linux.desktop  Setup-Mac.command  Setup-Windows.bat  Start-Linux.desktop  Start-Mac.command  Start-Windows.bat  build-dmg.sh  generate-icon.sh  install-easy.ps1  install-easy.sh  install.ps1  install.sh  release.sh  setup-local.ps1  setup-local.sh  setup.ps1  setup.sh  start-server.sh  start.ps1  start.sh  uninstall.ps1  uninstall.sh
site/: README.md  index.html
site/css/: style.css
site/js/: download.js
src/: __init__.py  __main__.py  config.py  frozen.py  log_config.py  main.py  updater.py
src/audio/: __init__.py  input.py  output.py  resample.py  vad.py
src/facilitation/: noting_prompts.py  pacing.py  prompts.py  session.py
src/llm/: anthropic.py  base.py  claude_proxy.py  ollama.py  openai.py
src/logging/: transcript.py
src/stt/: __init__.py  base.py  whisper.py  whisper_cpp.py
src/tts/: __init__.py  base.py  elevenlabs.py  macos.py  parakeet.py  piper.py  vibevoice.py
src/web/: __main__.py  app.py  audio_handlers.py  auth.py  background.py  cert.py  config_routes.py  llm_proxy.py  meditation_session.py  message_handlers.py  provider_routes.py  routes.py  session_handlers.py  socketio_handlers.py  stt_routes.py  tool_routes.py
tests/: conftest.py  test_config.py  test_pacing.py  test_parakeet.py  test_piper.py  test_prompts.py  test_session.py  test_tts_factory.py  test_updater.py  test_vad.py  test_vibevoice.py
ts/: .dockerignore  .gitignore  MOBILE.md  capacitor.config.ts  package-lock.json  package.json  tsconfig.json
ts/server/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  package.json  tsconfig.json  vitest.config.ts
ts/src/: cli.ts  clock.ts  index.ts
ts/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
ts/src-tauri/src/: lib.rs  llm.rs  ollama.rs  ollama_tools.rs  providers.rs  server.rs  tts.rs
ts/tests/: barge-in.test.ts  claude-proxy.test.ts  google-provider.test.ts  llm.test.ts  noting.test.ts  ollama-direct.test.ts  pacing.test.ts  platform.test.ts  prompts.test.ts  provider-availability.test.ts  (+10 more)
(+158 files in other folders)
