[package]
name = "app"
version = "0.1.0"
description = "aloud — voice-based meditation facilitator (desktop shell)"
authors = ["Alex Krusz"]
license = "AGPL-3.0"
repository = "https://github.com/akrusz/aloud"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# Embedded local backend (replaces Flask /api/* on desktop). The same UI
# adapters that hit the hosted server over HTTP hit this over HTTP too, so
# desktop and web share one code path (see dev-docs/desktop.md).
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
which = "7"
whisper-rs = "0.16.0"
ureq = "3.2.1"
